# IOT-Smart-fridge-backend

./: .gitignore  BOM.xlsx  README.md  index.html
arduino-folder/: README.md  read_sensor_value.ino
arduino-folder/Board-configuration/: read_sensor_value.ino
arduino-folder/Board-configuration/read_sensor/: read_sensor.ino
arduino-folder/board/read_sensor/: read_sensor.ino
fridge-api/: pyproject.toml
fridge-api/fridge_api/: api.py
smart-fridge/: pyproject.toml
smart-fridge/src/: endpointParser.py  workspace.py
smart-fridge/src/database/: Smart_Fridge.db  Smart_Fridge.sql  manipulate.py  models.py
smart-fridge/src/database/sql/: Smart_Fridge.sql
smart-fridge/src/modules/: cache.py  endpointParser.py  logging.py  utils.py
smart-fridge/src/restless/: api.py  app.py  endpointParser.py  endpoints.json  routeActions.py
smart-fridge/src/screen/: screen.py
smart-fridge/src/services/receiver/: .receiver.py.swp  receiver.py  sample_sender.py
smart-fridge/src/services/restless/: app.py  receiver.py
smart-fridge/src/services/restless/routing/: endpointParser.py  endpoints.json  routeActions.py
smart-fridge/src/services/screen/: screen.py
smart-fridge/src/services/websocket-proxy/: proxy.py
smart-fridge/tests/: test_restless_api.py  test_screen_screen.py
