[project]
name = "fridge-api"
version = "0.1.0"
description = "Restless API used for communication with other devices and manipulation of fridge through other devices."
authors = [
    {name = "ghosthookcc",email = "kasperthornsten@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry.scripts]
api = "fridge_api.api:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
