[project]
name = "smart-fridge"
version = "0.1.0"
description = "Restless API used for communication with other devices and manipulation of fridge through other devices."
authors = [
    {name = "ghosthookcc",email = "kasperthornsten@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "importlib (>=1.0.4,<2.0.0)",
    "jsonmerge (>=1.9.2,<2.0.0)",
]

[tool.poetry]
packages = [ {include = "services/restless", from = "src"},
             {include = "services/screen", from = "src"},
	     {include = "services/receiver", from = "src"} ]

[tool.poetry.scripts]
receiver-service = "services.receiver.receiver:main"
restless-service = "services.restless.app:main"
screen-service = "services.screen.screen:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
