[project]
name = "smart-fridge"
version = "0.1.0"
description = "Restless API used for communication with other devices and manipulation of fridge through other devices."
authors = [
    {name = "ghosthookcc",email = "kasperthornsten@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "importlib (>=1.0.4,<2.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "websockets (>=14.2,<15.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask-swagger (>=0.2.14,<0.3.0)",
    "flask-swagger-ui (>=4.11.1,<5.0.0)",
    "valkey (>=6.1.0,<7.0.0)",
]

[tool.poetry]
packages = [ {include = "services/restless", from = "src"},
             {include = "services/screen", from = "src"},
	         {include = "services/receiver", from = "src"},
             {include = "services/websocket-proxy", from = "src"},

             {include = "modules", from = "src"},

             {include = "src" } ]

[tool.poetry.scripts]
receiver-service = "services.receiver.receiver:main"
restless-service = "services.restless.app:main"
screen-service = "services.screen.screen:main"
proxy-service  = "services.websocket-proxy.proxy:runMain"
all = "workspace:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
